<resources>
    <string name="string1">First to know</string>
    <string name="string2">All news in one place, be the\nfirst to know last news</string>
    <string name="next">Next</string>
    <string name="app_name">Nuntium</string>
    <string name="get_started">Get Started</string>
    <string name="select_topic">Select your favorite topics</string>
    <string name="select_topic2">Select some of your favorite topics to let us suggest better news for you.</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>